# ShutdownTimer2

./: .gitignore  ARCHITECTURE.md  BUILDING.md  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.txt  README.md  SECURITY.md  resources.qrc  resources.rc
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  release.yml
assets/: icon.icns
i18n/: app_ar.ts  app_de.ts  app_en.ts  app_es.ts  app_fr.ts  app_ja.ts  app_ko.ts  app_pt_BR.ts  app_zh_CN.ts
linux/appstream/: org.fakylab.ShutdownTimer.appdata.xml
linux/dbus/: org.fakylab.ShutdownTimerHelper.conf  org.fakylab.ShutdownTimerHelper.service
linux/flatpak/: org.fakylab.ShutdownTimer.yaml
linux/helper/: shutdowntimer-helper.cpp
linux/polkit/: org.fakylab.shutdowntimer.policy
linux/systemd/: shutdowntimer-helper.service
macos/: Info.plist
packaging/: AUR_GUIDE.md  FLATHUB_GUIDE.md  PPA_GUIDE.md
packaging/appimage/: AppRun  shutdowntimer.desktop
packaging/aur/: .SRCINFO  PKGBUILD
packaging/deb/DEBIAN/: control  postinst  postrm  prerm
packaging/deb/usr/share/applications/: shutdowntimer.desktop
packaging/debian/: changelog  control  copyright  rules  shutdowntimer.1  watch
src/app/: SingleInstanceGuard.cpp  SingleInstanceGuard.h  main.cpp
src/controllers/: MessageController.cpp  MessageController.h  SettingsController.cpp  SettingsController.h  TimerController.cpp  TimerController.h
src/core/: LanguageManager.cpp  TimerEngine.cpp  TimerEngine.h
src/models/: AppSettingsModel.cpp  AppSettingsModel.h  MessageModel.cpp  MessageModel.h  TimerModel.cpp  TimerModel.h
src/services/: PlatformServiceFactory.cpp  PlatformServiceFactory.h
src/services/interfaces/: IAutoClearBackend.h  IMessageBackend.h  IShutdownBackend.h
src/services/platform/linux/: AutoClearBackendLinux.cpp  AutoClearBackendLinux.h  MessageBackendLinux.cpp  MessageBackendLinux.h  MessageBackendLinuxDBus.cpp  MessageBackendLinuxDBus.h  ShutdownBackendLinux.cpp  ShutdownBackendLinux.h  SlickNotification.h
src/services/platform/macos/: AutoClearBackendMacOS.cpp  AutoClearBackendMacOS.h  MacOSNotifier.h  MacOSNotifier.mm  MacOSSystemEvents.h  MacOSSystemEvents.mm  MessageBackendMacOS.cpp  MessageBackendMacOS.h  ShutdownBackendMacOS.cpp  ShutdownBackendMacOS.h
src/services/platform/windows/: AutoClearBackendWindows.cpp  AutoClearBackendWindows.h  MessageBackendWindows.cpp  MessageBackendWindows.h  ShutdownBackendWindows.cpp  ShutdownBackendWindows.h
src/views/: MainWindow.cpp  MainWindow.h  MessageView.cpp  MessageView.h  TimerView.cpp  TimerView.h
